# flashVSRnode

./: AILab_FlashVSR.py  CHANGELOG.md  FETCH_HEAD  ORIG_HEAD  README.md  README_ZH.md  README_zh.md  SAGEATTENTION_INSTALL.md  __init__.py  cli_main.py  config  download  index  model_paths.yaml  nodes.py  packed-refs  pyproject.toml  requirements.txt  update.md
FlashVSR/configs/: model_config.py
FlashVSR/models/: wan_video_dit.py
FlashVSR/pipelines/: flashvsr_full.py  flashvsr_tiny.py  flashvsr_tiny_long.py
FlashVSR/prompters/: __init__.py
FlashVSR/schedulers/: __init__.py
example_workflows/: FlashVSR.json
logs/: HEAD
logs/refs/heads/: main
objects/pack/: pack-0bebd0830b86a9375e17409ae8f62556c4a554fa.idx  pack-0bebd0830b86a9375e17409ae8f62556c4a554fa.rev  pack-439b957ef82c7971b913dc57bf75408102c3ec14.idx  pack-439b957ef82c7971b913dc57bf75408102c3ec14.pack  pack-439b957ef82c7971b913dc57bf75408102c3ec14.rev  pack-8856e3b4b4ac6f64d6384d409bbce360850752b6.idx  pack-8856e3b4b4ac6f64d6384d409bbce360850752b6.rev
refs/heads/: main
src/: __init__.py
src/configs/: model_config.py
src/models/: TCDecoder.py  utils.py  wan_video_dit.py  wan_video_vae.py
src/pipelines/: base.py  flashvsr_full.py  flashvsr_tiny.py  flashvsr_tiny_long.py
workflows/: publish.yml
